# web_modul_7

./: README.md  config.ini  my_select.py  pyproject.toml  seeds_all.py
alembic/versions/: 20f6119f18c2_init.py  72408a4d2999_init.py  80e9d7ac828f_init.py  9f587271fc0c_init.py
database/: db.py  models.py
seeds/: disciplines.py  grades.py  groups.py  students.py  teachers.py
