[tool.poetry]
name = "web_modul_7"
version = "0.1.0"
description = ""
authors = ["Daniel Zubov <https://github.com/DanielDDZ>"]
readme = "README.md"
packages = [{include = "web_modul_7"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.9.2"
sqlalchemy = "^1.4.46"
faker = "^18.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"